--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   },
   "prettier": {},
   "dependencies": {
-    "frontity": "^1.17.2",
     "@frontity/core": "^1.16.0",
-    "@frontity/wp-source": "^1.11.7",
-    "@frontity/tiny-router": "^1.4.4",
     "@frontity/html2react": "^1.7.0",
-    "@frontity/twentytwenty-theme": "./packages/twentytwenty-theme"
+    "@frontity/tiny-router": "^1.4.4",
+    "@frontity/twentytwenty-theme": "./packages/twentytwenty-theme",
+    "@frontity/wp-source": "^1.11.7",
+    "bootstrap": "^5.3.2",
+    "frontity": "^1.17.2",
+    "react-bootstrap": "^2.9.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.6"
   }
 }
